--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,19 @@
       <div class="container">
          <h1>Manage Node.js projects and npm packages using package.json</h1>
          <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <h1>
+           Prompt:
+        </h1>
+        <pre>
+          Example creation usage:
+          https://far-salesman.glitch.me/shortenurl/https://www.baidu.com
+          Example creation output
+          { "original_url":"https://www.baidu.com", "short_url":"https://far-salesman.glitch.me/8170" }
+          Usage:
+          https://far-salesman.glitch.me/8170
+          Will redirect to:
+          https://www.baidu.com/
+        </pre>
       </div>
    </body>
 
